--- a/ecc_25519/Makefile
+++ b/ecc_25519/Makefile
@@ -1,6 +1,5 @@
 CC = gcc
-CFLAGS = -Wall -Wextra -O2
-LDFLAGS = 
+CFLAGS = -Wall -Wextra -O2 -std=c99
 
 SOURCES = curve25519.c common.c ecc_main.c
 KEYGEN_SOURCES = curve25519.c common.c keygen.c
@@ -20,6 +19,12 @@ keygen: $(KEYGEN_OBJECTS)
 	$(CC) $(CFLAGS) -c $< -o $@
 
 clean:
-	rm -f $(OBJECTS) $(KEYGEN_OBJECTS) ecc_main keygen
+	rm -f $(OBJECTS) $(KEYGEN_OBJECTS) ecc_main keygen *.exe
 
-.PHONY: all clean
+test:
+	@echo "Manual testing instructions:"
+	@echo "1. Generate keys: ./keygen test"
+	@echo "2. Encrypt: ./ecc_main -e -i input.txt -k test -o output.enc"
+	@echo "3. Decrypt: ./ecc_main -d -i output.enc -k test -o decrypted.txt"
+
+.PHONY: all clean test
